feat: Реализовать ключ генерации, кнопку "Случайный ключ генерации". style: Исправлить margin у шаблонов Label,CheckBox; Установить Grid со StackPanel внутри вместо UniformGrid на главной форме.

--- a/Styles/Default.xaml
+++ b/Styles/Default.xaml
@@ -35,6 +35,7 @@
     </Style>
 
     <Style TargetType="CheckBox">
+        <Setter Property="Margin" Value="5"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -49,7 +50,7 @@
                                     Height="10" Width="10" 
                                     Visibility="Collapsed"/>
                         </Border>
-                        <Label>
+                        <Label Margin="0">
                             <ContentPresenter/>
                         </Label>
                     </StackPanel>
