--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -19,24 +19,38 @@
                 <GradientStop Color="{StaticResource Gray80}" Offset="0.7"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,50,0,0">
             <TextBlock FontSize="60"
                        FontWeight="Bold"
                        Text="{Binding ResultOfGeneration}"
                        TextAlignment="Center"/>
             <StackPanel Width="300">
-                <Button Command="{Binding GenerateIntCommand}"
+                <StackPanel>
+                    <Button Command="{Binding GenerateIntCommand}"
                         Content="Сгенерировать целое число"/>
-                <Button Command="{Binding GenerateDoubleCommand}"
+                    <Button Command="{Binding GenerateDoubleCommand}"
                         Content="Сгенерировать вещественное число"/>
-                <Button Command="{Binding GeneratePercentCommand}"
+                    <Button Command="{Binding GeneratePercentCommand}"
                         Content="Сгенерировать процент"/>
+                </StackPanel>
+                <StackPanel>
+                    <Label Content="Ключ генерации:"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="0.5*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox Text="{Binding Path=Seed, UpdateSourceTrigger=PropertyChanged}"/>
+                        <Button Command="{Binding RandomSeedCommand}" Margin="0" Grid.Column="1" Content="Случайный"/>
+                    </Grid>
+                    </StackPanel>
                 <StackPanel>
                     <CheckBox x:Name="UseRangeCheckBox" IsChecked="{Binding UseRange}" 
-                              Content="Использовать диапозон" HorizontalAlignment="Center"/>
-                    <UniformGrid Rows="4">
-                        <UniformGrid.Style>
-                            <Style TargetType="UniformGrid">
+                              Content="Использовать диапозон"
+                              HorizontalAlignment="Center"/>
+                    <Grid>
+                        <Grid.Style>
+                            <Style TargetType="Grid">
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding ElementName=UseRangeCheckBox, Path=IsChecked}" Value="true">
                                         <Setter Property="Visibility" Value="Visible"/>
@@ -46,12 +60,14 @@
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
-                        </UniformGrid.Style>
-                        <Label Content="Минимум:"/>
-                        <TextBox Text="{Binding MinRange}"/>
-                        <Label Content="Максимум:"/>
-                        <TextBox Text="{Binding MaxRange}"/>
-                    </UniformGrid>
+                        </Grid.Style>
+                        <StackPanel>
+                            <Label Content="Минимум:"/>
+                            <TextBox Text="{Binding MinRange}"/>
+                            <Label Content="Максимум:"/>
+                            <TextBox Text="{Binding MaxRange}"/>
+                        </StackPanel>
+                    </Grid>
                 </StackPanel>
             </StackPanel>
         </StackPanel>
