--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="RandomFactory" Height="800" Width="800"
         WindowStartupLocation="CenterScreen">
     <Window.DataContext>
-        <viewmodels:MainViewModel/>
+        <viewmodels:RandomGeneratorVM/>
     </Window.DataContext>
     <Window.Resources>
     </Window.Resources>
