--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RandomFactory" xmlns:viewmodels="clr-namespace:RandomFactory.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        Title="RandomFactory" Height="800" Width="800"
+        Title="RandomFactory" Height="800" Width="800" Closing="Window_Closing"
         WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <viewmodels:RandomGeneratorVM/>
@@ -70,9 +70,9 @@
                         </Grid.Style>
                         <StackPanel>
                             <Label Content="Минимум:"/>
-                            <TextBox Text="{Binding MinRange}"/>
+                            <TextBox Text="{Binding MinRange, UpdateSourceTrigger=PropertyChanged}"/>
                             <Label Content="Максимум:"/>
-                            <TextBox Text="{Binding MaxRange}"/>
+                            <TextBox Text="{Binding MaxRange, UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                     </Grid>
                 </StackPanel>
