--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -3,14 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RandomFactory" xmlns:viewmodels="clr-namespace:RandomFactory.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:local="clr-namespace:RandomFactory" xmlns:viewmodels="clr-namespace:RandomFactory.ViewModels" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" d:DataContext="{d:DesignInstance Type=viewmodels:MainVM}"
         mc:Ignorable="d"
         Title="RandomFactory" Height="800" Width="800" Closing="Window_Closing"
         WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <Style TargetType="ListBox">
+        <Style TargetType="ListBox" x:Key="HistoryValues">
             <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="BorderThickness" Value="0"/>
         </Style>
     </Window.Resources>
     <Grid>
@@ -23,7 +23,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -32,9 +32,15 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <ListBox Grid.Column="1" Height="200">
-                
-            </ListBox>
+            <Grid Height="300" Grid.Column="1">
+                <ListBox Margin="30,0" HorizontalContentAlignment="Right" Style="{StaticResource HistoryValues}" ItemsSource="{Binding ValueHistory}" VerticalAlignment="Bottom">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock FontSize="20" Opacity="0.2" HorizontalAlignment="Right" Text="{Binding Value}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </Grid>
             <StackPanel Grid.ColumnSpan="3" Grid.Row="1">
                 <TextBlock x:Name="ResultOfGeneration"
                        FontSize="60"
