--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -33,12 +33,18 @@
             </Grid.RowDefinitions>
 
             <Grid Height="300" Grid.Column="1">
-                <ListBox Margin="30,0" HorizontalContentAlignment="Right" Style="{StaticResource HistoryValues}" ItemsSource="{Binding ValueHistory}" VerticalAlignment="Bottom">
+                <ListBox x:Name="HistoryListBox" Margin="30,0" HorizontalContentAlignment="Right" Style="{StaticResource HistoryValues}" ItemsSource="{Binding ValueHistory}" VerticalAlignment="Bottom">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock FontSize="20" Opacity="0.2" HorizontalAlignment="Right" Text="{Binding Value}"/>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding HistorySelectCommand}" 
+                                CommandParameter="{Binding ElementName=HistoryListBox, Path=SelectedItem}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                 </ListBox>
             </Grid>
             <StackPanel Grid.ColumnSpan="3" Grid.Row="1">
